# qmpdplasmoid

./: ProjectHome.md  networkaccess.cpp  qmpdplasmoid.kdev4  qmpdplasmoidconfig.ui  ui_contextview.h  ui_songinfo.ui  wlitrack.cpp
trunk/: CMakeLists.txt  Messages.sh  README  mpdartist.cpp  networkaccess.h  plasma-applet-qmpdplasmoid.desktop  qmpdplasmoid.cpp  qmpdplasmoid.h  ui_contextview.ui  ui_songinfo.cpp  wlifile.cpp  wlifile.h
